<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Activities.RegisterActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/main_drawer_header"
        app:menu="@menu/main_drawer_menu"
        android:layout_gravity="start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#3099CA"
            app:title="@string/register"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:titleTextColor="@color/white"
            tools:ignore="MissingConstraints" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EDF1F3"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="-20dp"
                android:layout_gravity="center">

<!--                <ImageView-->
<!--                    android:id="@+id/logo_image"-->
<!--                    android:layout_width="150dp"-->
<!--                    android:layout_height="150dp"-->
<!--                    android:src="@drawable/car"-->
<!--                    android:transitionName="logo_image" />-->

                <TextView
                    android:id="@+id/RlogoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/archivo_black"
                    android:text="@string/welcome"
                    android:textColor="#000"
                    android:textSize="40dp"
                    android:transitionName="logo_text" />

                <TextView
                    android:id="@+id/RsloganName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_to_start_your_new_journey"
                    android:textSize="22dp"
                    android:layout_marginTop="15dp"
                    android:transitionName="logo_desc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="100"
                        >

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:src="@drawable/profile_vector" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="90">

                            <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/tfRfirstName"
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/first_name">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/tfRFirstNameEditText"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@color/white"
                                        android:textColor="#5C5656"
                                        android:inputType="text" />

                                </com.google.android.material.textfield.TextInputLayout>

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="100"
                        >

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:src="@drawable/profile_vector" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="90">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/tfRlastName"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/last_name">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/tfRLastNameEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@color/white"
                                    android:textColor="#5C5656"
                                    android:inputType="text" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="100"
                        >

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:src="@drawable/birthday_vector" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="90">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/tfRbirthday"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/date_of_birth">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/tfRbirthEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@color/white"
                                    android:textColor="#5C5656"
                                    android:inputType="text" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="100"
                        >

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:src="@drawable/email_vector" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="90">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/tfRemail"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/email">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/tfREmailEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@color/white"
                                    android:textColor="#5C5656"
                                    android:inputType="text" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="100"
                        >

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:src="@drawable/password_vector" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="90">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/tfRpassword"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:passwordToggleEnabled="true"
                                android:hint="@string/password">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/tfRPaasswordEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@color/white"
                                    android:textColor="#5C5656"
                                    android:inputType="textPassword" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </RelativeLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/btnRregister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/bg_btn"
                        android:backgroundTint="#FFFFFF"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:textColor="#62819A"
                        android:textSize="26dp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/btnRlogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/aclonica"
                        android:gravity="center"
                        android:text="@string/already_have_an_account"
                        android:textColor="#000"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>