<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Activities.LoginActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    >

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/main_drawer_header"
        app:menu="@menu/main_drawer_menu"
        android:layout_gravity="start"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#3099CA"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/login"
            app:titleTextColor="@color/white"
            tools:ignore="MissingConstraints" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EDF1F3"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <!--                <ImageView-->
                <!--                    android:id="@+id/logoImage"-->
                <!--                    android:layout_width="150dp"-->
                <!--                    android:layout_height="150dp"-->
                <!--                    android:transitionName="logo_image"-->
                <!--                    android:src="@drawable/car"/>-->

                <TextView
                    android:id="@+id/logoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/archivo_black"
                    android:text="@string/hello_there_welcome_back"
                    android:textColor="#000"
                    android:textSize="40dp"
                    android:transitionName="logo_text" />

                <TextView
                    android:id="@+id/sloganName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_in_to_continue"
                    android:textSize="22dp"
                    android:transitionName="logo_desc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="100"
                        >

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:src="@drawable/email_vector" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="90">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/tfEmail"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/email">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/tfEmailEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@color/white"
                                    android:inputType="text"
                                    android:textColor="#5C5656"
                                    android:transitionName="email_tran" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </RelativeLayout>



                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="100"
                        >

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/password_vector"
                                android:layout_centerInParent="true"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="90">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/tfPassword"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:passwordToggleEnabled="true"
                                android:hint="@string/password">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/tfPasswordEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@color/white"
                                    android:inputType="textPassword"
                                    android:transitionName="email_tran" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </RelativeLayout>


                    </LinearLayout>


                    <TextView
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/bg_btn"
                        android:backgroundTint="#FFFFFF"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="#62819A"
                        android:textSize="26dp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/aclonica"
                        android:gravity="center"
                        android:text="@string/new_user_register"
                        android:textColor="#000"
                        android:textSize="18dp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>






</androidx.drawerlayout.widget.DrawerLayout>